--- a/API/.env
+++ b/API/.env
@@ -1,4 +1,5 @@
 PORT=3000
 # MONGO_ADDRESS='mongodb+srv://admin:grgmBs364As4hzEZ@etna.jjyzurb.mongodb.net/C2WK?retryWrites=true&w=majority'
-MONGO_ADDRESS='mongodb://admin:password@mongo:27017'
+# MONGO_ADDRESS1='mongodb://'
+# MONGO_ADDRESS2='@mongo:27017'
 TOKEN_SECRET='g58Rt7Y5kN3IuE3pVOOeVCgXOY1gnAvrIvWwExDDsX4x5EPm'
