--- a/Docker/docker-compose.yaml
+++ b/Docker/docker-compose.yaml
@@ -7,10 +7,13 @@ services:
     ports:
       - 8000:80
   api:
-    image: mileristo/api:1.0
+    image: mileristo/api:2.0
     restart: always
     ports:
       - 3000:3000
+    environment:
+      NAME: admin
+      PASSWORD: password
   mongo:
     image: mongo
     restart: always
