--- a/K8S/webapp.yaml
+++ b/K8S/webapp.yaml
@@ -16,25 +16,9 @@ spec:
     spec:
       containers:
       - name: webapp
-        image: mileristo/api:3.0
+        image: mileristo/angular:3.0
         ports:
-        - containerPort: 3000
-        env:
-        - name: USER_NAME
-          valueFrom:
-            secretKeyRef:
-              name: mongo-secret
-              key: mongo-user
-        - name: USER_PWD
-          valueFrom:
-            secretKeyRef:
-              name: mongo-secret
-              key: mongo-password 
-        - name: DB_URL
-          valueFrom:
-            configMapKeyRef:
-              name: mongo-config
-              key: mongo-url
+        - containerPort: 80
 ---
 apiVersion: v1
 kind: Service
@@ -46,6 +30,6 @@ spec:
     app: webapp
   ports:
     - protocol: TCP
-      port: 3000
-      targetPort: 3000
+      port: 80
+      targetPort: 80
       nodePort: 30100
