--- a/K8S/api.yaml
+++ b/K8S/api.yaml
@@ -41,9 +41,9 @@ kind: Service
 metadata:
   name: api-service
 spec:
+  type: LoadBalancer
   selector:
     app: api
   ports:
-    - protocol: TCP
-      port: 3000
+    - port: 3000
       targetPort: 3000
