--- a/Front/Dockerfile
+++ b/Front/Dockerfile
@@ -10,5 +10,6 @@ RUN npm run build --prod
 
 
 FROM nginx:latest AS ngi
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 COPY --from=build /dist/src/app/dist/front /usr/share/nginx/html
 EXPOSE 80
