--- a/Front/package.json
+++ b/Front/package.json
@@ -27,6 +27,7 @@
         "@angular-devkit/build-angular": "^15.0.2",
         "@angular/cli": "^15.0.4",
         "@angular/compiler-cli": "^15.0.0",
+        "node-sass": "^8.0.0",
         "typescript": "~4.8.2"
     }
 }
