--- a/Docker/docker-compose.yaml
+++ b/Docker/docker-compose.yaml
@@ -2,10 +2,12 @@ version: "3.1"
 
 services:
   angular:
-    image: mileristo/angular:v1
+    image: mileristo/angular:v2
     restart: always
     ports:
       - 8000:80
+    environment:
+      API_URL: api:3000
   api:
     image: mileristo/api:v1
     restart: always
@@ -15,6 +17,7 @@ services:
       USER_NAME: admin
       USER_PWD: password
       DB_URL: mongo:27017
+      TOKEN_SECRET: g58Rt7Y5kN3IuE3pVOOeVCgXOY1gnAvrIvWwExDDsX4x5EPm
   mongo:
     image: mongo
     restart: always
