--- a/K8S/angular.yaml
+++ b/K8S/angular.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: angular
-          image: mileristo/angular:v3
+          image: mileristovski/front:v2
           ports:
             - containerPort: 80
           env:
