--- a/K8S/api.yaml
+++ b/K8S/api.yaml
@@ -1,10 +1,3 @@
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: api-config
-data:
-  api-url: api-service
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -47,6 +40,8 @@ spec:
                 configMapKeyRef:
                   name: mongo-config
                   key: mongo-url
+            - name: PORT
+              value: "80"
 ---
 apiVersion: v1
 kind: Service
