--- a/K8S/ingress/routing.yaml
+++ b/K8S/ingress/routing.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: testsite.fr
+  - host: mileristovski.fr
     http:
       paths:
       - path: /api(/|$)(.*)
@@ -27,7 +27,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: testsite.fr
+  - host: mileristovski.fr
     http:
       paths:
       - path: /
