[FIX] - Big reorganisation

--- a/Front/angular.json
+++ b/Front/angular.json
@@ -52,9 +52,7 @@
                             "src/assets"
                         ],
                         "styles": [
-                            "src/styles.scss",
-                            "src/styles/user.styles.scss",
-                            "src/styles/car.styles.scss"
+                            "src/styles.scss"
                         ],
                         "scripts": []
                     },
@@ -117,9 +115,7 @@
                             "src/assets"
                         ],
                         "styles": [
-                            "src/styles.scss",
-                            "src/styles/user.styles.scss",
-                            "src/styles/car.styles.scss"
+                            "src/styles.scss"
                         ],
                         "scripts": []
                     }
