--- a/V1/Front/package.json
+++ b/V1/Front/package.json
@@ -13,7 +13,7 @@
         "@angular/animations": "^15.0.0",
         "@angular/common": "^15.0.0",
         "@angular/compiler": "^15.0.0",
-        "@angular/core": "^15.0.0",
+        "@angular/core": "^15.2.10",
         "@angular/forms": "^15.0.0",
         "@angular/platform-browser": "^15.0.0",
         "@angular/platform-browser-dynamic": "^15.0.0",
@@ -27,6 +27,15 @@
         "@angular-devkit/build-angular": "^15.0.2",
         "@angular/cli": "^15.0.4",
         "@angular/compiler-cli": "^15.0.0",
+        "@types/express": "^4.17.17",
+        "@types/jasmine": "~5.1.0",
+        "@types/node": "^18.18.0",
+        "jasmine-core": "~5.1.0",
+        "karma": "~6.4.0",
+        "karma-chrome-launcher": "~3.2.0",
+        "karma-coverage": "~2.2.0",
+        "karma-jasmine": "~5.1.0",
+        "karma-jasmine-html-reporter": "~2.1.0",
         "node-sass": "^8.0.0",
         "typescript": "~4.8.2"
     }
