[FIX] - fixed the deployment

--- a/V1/K8S/angular.yaml
+++ b/V1/K8S/angular.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: angular
-          image: mileristovski/front:v3
+          image: public.ecr.aws/z0b4y2d8/frontend:V2
           ports:
             - containerPort: 80
 ---
